# Lunch

./: .gitignore  .pre-commit-config.yaml  .tool-versions  README.md  docker-compose.yml  entrypoint.py  justfile  lunch.db  lunch.db.og  lunch.py  lunch_list.csv  lunch_psg.py  main.py  pyproject.toml  recent_lunch.csv  requirements.txt  restaurants.csv  util.py
.devcontainer/: devcontainer.json  requirements.txt
.github/workflows/: main.yml
legacy/: lunch.py
